fixed reset button styling and hid overflow

--- a/src/components/Analyze/DifferentiaExpAnalysisResults/D3Graphics/D3GraphStyles.css
+++ b/src/components/Analyze/DifferentiaExpAnalysisResults/D3Graphics/D3GraphStyles.css
@@ -18,6 +18,10 @@
   font-family: Lato;
 }
 
+body {
+  overflow-y: hidden !important;
+}
+
 svg {
   background-color: var(--background-color);
 }
